# workflow-orchestrator

./: .gitignore  ARCHITECTURE.md  DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
client/: workflow_client.py
coordinator/: main.py
coordinator/api/: health.py  jobs.py  workers.py  workflows.py
coordinator/core/: dependencies.py  scheduler.py  state_manager.py  storage.py  worker_registry.py  workflow_engine.py
coordinator/db/: __init__.py  models.py  postgres.py  redis.py
coordinator/utils/: workflow_parser.py
docker/: coordinator.Dockerfile  worker.Dockerfile
examples/: README.md  database_demo.py  submit_workflow.py  workflow_demo.py  workflows.py
examples/workflow_definitions/: data-processing-pipeline.yaml  deployment-pipeline.yaml  parallel-processing.yaml  simple-workflow.yaml
scripts/: init_db.py  setup_databases.sh
shared/: enums.py  messages.py  models.py  schemas.py
tests/: README.md  conftest.py
tests/e2e/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  conftest.py  docker-compose.e2e.yml  test_failure_scenarios.py  test_parallel_execution.py  test_worker_management.py  test_workflow_lifecycle.py
tests/integration/: README_DB_TESTS.md  conftest.py  test_api_health.py  test_api_jobs.py  test_api_workers.py  test_api_workflows.py  test_postgres_integration.py  test_redis_integration.py  test_state_manager_persistence.py
worker/: main.py
worker/jobs/: base.py  (+4 more)
(+7 files in other folders)
