[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-orchestrator"
version = "0.1.0"
description = "Distributed workflow orchestration system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "websockets>=12.0,<13.0",
    "requests>=2.31.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "httpx>=0.25.0,<1.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "black>=23.0.0,<24.0.0",
    "types-requests>=2.31.0,<3.0.0",
]

[tool.setuptools.packages.find]
include = ["coordinator*", "worker*", "shared*", "client*", "examples*"]
